javascript calendar is done.

--- a/build.lucifer.properties
+++ b/build.lucifer.properties
@@ -1,7 +1,9 @@
+# Managed by Liferay IDE (remove this comment to prevent future updates)
+
 #Managed by Liferay IDE (remove this comment to prevent future updates)
 #Fri Apr 26 16:35:48 IRDT 2013
-app.server.portal.dir=/media/part2/development/current/liferay-portal-6.1.1-ce-ga2/tomcat-7.0.27/webapps/ROOT
-app.server.lib.global.dir=/media/part2/development/current/liferay-portal-6.1.1-ce-ga2/tomcat-7.0.27/lib/ext
-app.server.deploy.dir=/media/part2/development/current/liferay-portal-6.1.1-ce-ga2/tomcat-7.0.27/webapps
-app.server.type=tomcat
-app.server.dir=/media/part2/development/current/liferay-portal-6.1.1-ce-ga2/tomcat-7.0.27
+app.server.portal.dir = /media/part2/development/current/liferay-portal-6.1.1-ce-ga2/tomcat-7.0.27/webapps/ROOT
+app.server.lib.global.dir = /media/part2/development/current/liferay-portal-6.1.1-ce-ga2/tomcat-7.0.27/lib/ext
+app.server.deploy.dir = /media/part2/development/current/liferay-portal-6.1.1-ce-ga2/tomcat-7.0.27/webapps
+app.server.type = tomcat
+app.server.dir = /media/part2/development/current/liferay-portal-6.1.1-ce-ga2/tomcat-7.0.27
