--- a/hooks/daka-hook/docroot/WEB-INF/src/portal-dev.properties
+++ b/hooks/daka-hook/docroot/WEB-INF/src/portal-dev.properties
@@ -23,8 +23,8 @@ com.liferay.portal.servlet.filters.header.HeaderFilter=false
 com.liferay.portal.servlet.filters.themepreview.ThemePreviewFilter=true
 
 
-hibernate.cache.use_query_cache=false
-hibernate.cache.use_second_level_cache=false
+#hibernate.cache.use_query_cache=false
+#hibernate.cache.use_second_level_cache=false
 
 com.liferay.portal.servlet.filters.gzip.GZipFilter=false
 #com.liferay.portal.servlet.filters.minifier.MinifierFilter=false
