--- a/hooks/daka-hook/docroot/WEB-INF/src/portal-dev.properties
+++ b/hooks/daka-hook/docroot/WEB-INF/src/portal-dev.properties
@@ -27,7 +27,7 @@ com.liferay.portal.servlet.filters.themepreview.ThemePreviewFilter=true
 #hibernate.cache.use_second_level_cache=false
 
 com.liferay.portal.servlet.filters.gzip.GZipFilter=false
-#com.liferay.portal.servlet.filters.minifier.MinifierFilter=false
+com.liferay.portal.servlet.filters.minifier.MinifierFilter=false
 #com.liferay.portal.servlet.filters.dynamiccss.DynamicCSSFilter=false
 com.liferay.portal.servlet.filters.strip.StripFilter=false
 
