--- a/hooks/rtl-hook/docroot/WEB-INF/src/portal-dev.properties
+++ b/hooks/rtl-hook/docroot/WEB-INF/src/portal-dev.properties
@@ -1,32 +1,33 @@
-#theme.css.fast.load=false
-#theme.images.fast.load=false
-#
-#javascript.fast.load=false
-#javascript.log.enabled=false
-#
-#layout.template.cache.enabled=false
-#
-#browser.launcher.url=
-#
-#combo.check.timestamp=true
-#
-#freemarker.engine.cache.storage=soft:1
-#freemarker.engine.modification.check.interval=0
-#
-#openoffice.cache.enabled=false
-#
-#velocity.engine.resource.manager.cache.enabled=false
-#
-#com.liferay.portal.servlet.filters.cache.CacheFilter=false
-#com.liferay.portal.servlet.filters.etag.ETagFilter=false
-#com.liferay.portal.servlet.filters.header.HeaderFilter=false
-#com.liferay.portal.servlet.filters.themepreview.ThemePreviewFilter=true
-#
-#
+theme.css.fast.load=false
+theme.images.fast.load=false
+
+javascript.fast.load=false
+javascript.log.enabled=false
+
+layout.template.cache.enabled=false
+
+browser.launcher.url=
+
+combo.check.timestamp=true
+
+freemarker.engine.cache.storage=soft:1
+freemarker.engine.modification.check.interval=0
+
+openoffice.cache.enabled=false
+
+velocity.engine.resource.manager.cache.enabled=false
+
+com.liferay.portal.servlet.filters.cache.CacheFilter=false
+com.liferay.portal.servlet.filters.etag.ETagFilter=false
+com.liferay.portal.servlet.filters.header.HeaderFilter=false
+com.liferay.portal.servlet.filters.themepreview.ThemePreviewFilter=true
+
+
 #hibernate.cache.use_query_cache=false
 #hibernate.cache.use_second_level_cache=false
-#
-#com.liferay.portal.servlet.filters.gzip.GZipFilter=false
-#com.liferay.portal.servlet.filters.minifier.MinifierFilter=false
-#com.liferay.portal.servlet.filters.strip.StripFilter=false
-#
+
+com.liferay.portal.servlet.filters.gzip.GZipFilter=false
+com.liferay.portal.servlet.filters.minifier.MinifierFilter=false
+#com.liferay.portal.servlet.filters.dynamiccss.DynamicCSSFilter=false
+com.liferay.portal.servlet.filters.strip.StripFilter=false
+
