--- a/hooks/bidi-hook/docroot/WEB-INF/src/portal-dev.properties
+++ b/hooks/bidi-hook/docroot/WEB-INF/src/portal-dev.properties
@@ -21,3 +21,5 @@ com.liferay.portal.servlet.filters.cache.CacheFilter=false
 com.liferay.portal.servlet.filters.etag.ETagFilter=false
 com.liferay.portal.servlet.filters.header.HeaderFilter=false
 com.liferay.portal.servlet.filters.themepreview.ThemePreviewFilter=true
+com.liferay.portal.servlet.filters.minifier.MinifierFilter=true
+com.liferay.portal.servlet.filters.strip.StripFilter=false
