preparing for market place

--- a/hooks/bidi-hook/docroot/WEB-INF/src/portal-dev.properties
+++ b/hooks/bidi-hook/docroot/WEB-INF/src/portal-dev.properties
@@ -1,5 +1,5 @@
-theme.css.fast.load=false
-theme.images.fast.load=false
+theme.css.fast.load=true
+theme.images.fast.load=true
 
 javascript.fast.load=true
 javascript.log.enabled=false
@@ -11,15 +11,15 @@ browser.launcher.url=
 combo.check.timestamp=true
 
 freemarker.engine.cache.storage=soft:1
-freemarker.engine.modification.check.interval=0
+freemarker.engine.modification.check.interv	al=0
 
 openoffice.cache.enabled=false
 
 velocity.engine.resource.manager.cache.enabled=false
 
-com.liferay.portal.servlet.filters.cache.CacheFilter=false
-com.liferay.portal.servlet.filters.etag.ETagFilter=false
-com.liferay.portal.servlet.filters.header.HeaderFilter=false
+com.liferay.portal.servlet.filters.cache.CacheFilter=true
+com.liferay.portal.servlet.filters.etag.ETagFilter=true
+com.liferay.portal.servlet.filters.header.HeaderFilter=true
 com.liferay.portal.servlet.filters.themepreview.ThemePreviewFilter=true
 com.liferay.portal.servlet.filters.minifier.MinifierFilter=true
-com.liferay.portal.servlet.filters.strip.StripFilter=false
+com.liferay.portal.servlet.filters.strip.StripFilter=true
