--- a/hooks/bidi-hook/docroot/WEB-INF/src/portal-dev.properties
+++ b/hooks/bidi-hook/docroot/WEB-INF/src/portal-dev.properties
@@ -1,7 +1,7 @@
 theme.css.fast.load=true
 theme.images.fast.load=true
 
-javascript.fast.load=false
+javascript.fast.load=true
 javascript.log.enabled=false
 
 layout.template.cache.enabled=false
@@ -17,9 +17,9 @@ openoffice.cache.enabled=false
 
 velocity.engine.resource.manager.cache.enabled=false
 
-com.liferay.portal.servlet.filters.cache.CacheFilter=false
-com.liferay.portal.servlet.filters.etag.ETagFilter=false
-com.liferay.portal.servlet.filters.header.HeaderFilter=false
-com.liferay.portal.servlet.filters.themepreview.ThemePreviewFilter=false
-com.liferay.portal.servlet.filters.minifier.MinifierFilter=false
-com.liferay.portal.servlet.filters.strip.StripFilter=false
+com.liferay.portal.servlet.filters.cache.CacheFilter=true
+com.liferay.portal.servlet.filters.etag.ETagFilter=true
+com.liferay.portal.servlet.filters.header.HeaderFilter=true
+com.liferay.portal.servlet.filters.themepreview.ThemePreviewFilter=true
+com.liferay.portal.servlet.filters.minifier.MinifierFilter=true
+com.liferay.portal.servlet.filters.strip.StripFilter=true
