--- a/hooks/bidi-hook/docroot/WEB-INF/src/portal-dev.properties
+++ b/hooks/bidi-hook/docroot/WEB-INF/src/portal-dev.properties
@@ -1,4 +1,4 @@
-theme.css.fast.load=true
+theme.css.fast.load=false
 theme.images.fast.load=true
 
 javascript.fast.load=true
@@ -17,8 +17,8 @@ openoffice.cache.enabled=false
 
 velocity.engine.resource.manager.cache.enabled=false
 
-com.liferay.portal.servlet.filters.cache.CacheFilter=true
-com.liferay.portal.servlet.filters.etag.ETagFilter=true
+com.liferay.portal.servlet.filters.cache.CacheFilter=false
+com.liferay.portal.servlet.filters.etag.ETagFilter=false
 com.liferay.portal.servlet.filters.header.HeaderFilter=true
 com.liferay.portal.servlet.filters.themepreview.ThemePreviewFilter=true
 com.liferay.portal.servlet.filters.minifier.MinifierFilter=true
